syntax = "proto3";

package fr.raven.proto.message.game;

option java_outer_classname = "AbilityProto";

message UseAbility {
  uint32 abilityId = 1;
  uint64 explicitTargetGuid = 2;
}
